# clai

./: 1  Cargo.toml  README.md
src/: app_state.rs  get_interface.rs  help-interactive.txt  main.rs  markdown.rs  parse_model.rs  prompt.rs  recovery_prompt.rs
src/commands/: chat.rs  embed.rs  generate.rs  mod.rs  model_with_model.rs  read.rs  semantic_search.rs
src/interfaces/: frame.rs  google.rs  mod.rs  ollama.rs  trait.rs
src/interfaces/google/: data_types.rs  embeds.rs  mod.rs
src/interfaces/google/data_types/: embed.rs  gen_response.rs  generate.rs  message_parts.rs  mod.rs
src/states/: app.rs  context.rs  interface.rs  messages.rs  mod.rs  visible.rs
