[package]
name = "clai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
atty = "0.2.14"
clap = { version = "4.5.32", features = ["derive"] }
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
